--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -461,8 +461,8 @@ section {
 }
 
 #about .div-img-bg {
-  padding-bottom: 30px;
-  border: 20px solid #b8a07e;
+  /* padding-bottom: 30px; */
+  /* border: 20px solid #b8a07e; */
 }
 
 #about .div-img-bg .about-img img {
@@ -470,7 +470,7 @@ section {
   box-shadow: 0px 0px 85px 0px rgba(0, 0, 0, 0.2);
   margin-top: -60px;
   margin-left: 40px;
-  height: 400px;
+  height: 500px;
   -o-object-fit: cover;
   object-fit: cover;
 }
